5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1638_2450.log
== TEST (2019-04-23 10:00:59) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper()>= n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 10:03:54) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper()>= n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)
-- EXECUTION TIME:
0.142615
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 10:04:33) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper()> n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 10:04:55) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper()> n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)
-- EXECUTION TIME:
0.271435
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 10:05:55) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper()> n2.upper()):
	print(n, n2)
else:
	print(n2, n)
-- OUTPUT:
Leon Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 10:07:00) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper()> n2.upper()):
	print(n, n2)
else:
	print(n2, n)
-- EXECUTION TIME:
0.13442
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 10:07:55) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n > n2):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)
-- EXECUTION TIME:
0.197129
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 10:10:02) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n > n2):
	print(n)
	print(n2)
if(n2 > n)
	print(n2)
	print(n)
-- EXECUTION TIME:
0.172667
-- ERROR:
  File "/home/codebench/codes/1638/2450/main.py", line 6
    if(n2 > n)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:24:32) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n > n2):
	print(n)
	print(n2)

-- EXECUTION TIME:
0.136532
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:

-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:25:10) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n > n2):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)

-- EXECUTION TIME:
0.143958
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:25:12) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n > n2):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)

-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:25:40) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper() > n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)

-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:26:07) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper() > n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)

-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:28:11) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper() >= n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)

-- EXECUTION TIME:
0.206978
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:29:54) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper() >= n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)

-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:31:06) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if("n".upper() > "n2".upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)

-- EXECUTION TIME:
0.158456
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:32:13) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper() > n2.upper()):
	print(n)
	print(n2)
if(n.upper() < n2.upper()):
	print(n2)
	print(n)

-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:41:29) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper() >= n2.upper()):
	print(n, n2)
else:
	print(n2, n)
	
	

-- OUTPUT:
Leon Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:42:47) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper() <= n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)
	
	

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:43:02) 
-- CODE:
n = input("Digite o nome: ")
n2 = input("Digite o nome: ")
if(n.upper() <= n2.upper()):
	print(n)
	print(n2)
else:
	print(n2)
	print(n)
	
	

-- EXECUTION TIME:
0.162246
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
